# DBPFKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
apps/s3d_model_viewer/: main.cpp
examples/rul0/: 4023_FARR-2-3_Crossings.txt
src/: DBPFReader.cpp  DBPFReader.h  DBPFStructures.h  Exemplar.cpp  Exemplar.h  ExemplarReader.cpp  ExemplarReader.h  ExemplarStructures.cpp  ExemplarStructures.h  FSHReader.cpp  FSHReader.h  FSHStructures.h  LTextReader.cpp  LTextReader.h  MappedFile.cpp  MappedFile.h  ParseTypes.h  QFSDecompressor.cpp  QFSDecompressor.h  RUL0.cpp  RUL0.h  S3DReader.cpp  S3DReader.h  S3DStructures.h  SafeSpanReader.h  TGI.cpp  TGI.h  gui_main.cpp  main.cpp
tests/: parse_helpers_tests.cpp  tests.cpp
